kubernetes/apps/cert-manager/cert-manager/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: cert-manager
            io.kubernetes.pod.namespace: cert-manager
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9402"
              protocol: TCP
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: adguard
            app.kubernetes.io/name: adguard-home
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: cert-manager
            io.kubernetes.pod.namespace: cert-manager
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8
            - 172.16.0.0/12
            - 192.168.0.0/16
